syntax = "proto3";
package pb;

option go_package=".;services";

import "google/api/annotations.proto";
message ProdRequest {
  int32 prod_id = 1;
}

message QuerySize {
  int32 size = 1;
}
message ProdResponseList{
  repeated ProdResponse prodres = 1;
}

message ProdResponse {
  int32 prod_stock = 1;
}


service ProdService {
  rpc GetProdStock(ProdRequest) returns (ProdResponse) {
    option (google.api.http) = {
      get: "/v1/prod/{prod_id}"
    };
  };
  rpc GetProdStockSize(QuerySize) returns (ProdResponseList) {
    option(google.api.http) = {
      get: "/v1/prod"
    };
  }
}
